<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, EmergencyBuddyActivity!</string>
    <string name="app_name">Emergency Buddy</string>
    <string name="app_logo_top">Emergency Buddy</string>
    <string name="app_logo_bottom">Emergency Kit for Android</string>
    <string name="app_version_info">Version 2.0.0\nCopyright © 2012 Prabhath </string>
	<string name="menu_ambulance">Call Ambulance </string>
	<string name="menu_callpolice">Call Police</string>

	<string name="menu_hospital">Find Hospital </string>
	<string name="menu_police">Find Police Station </string>
	<string name="emergency_on">Emergency Mode: On</string>
	<string name="emergency_off">Emergency Mode: Off</string>
	<string name="call_fbrigade">Call Fire Brigade</string>
	<string name="menu_title">Main Menu</string>
	<string name="menu_self">My Location</string>
	<string name="meny_whether">Whether Info</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_help">Help</string>
	
	
	 <string name="menu_item_settings">Settings</string>
	 <string name="menu_item_help">Help</string>
	 <string name="help_title">Help</string>
	 <string name="temp">temp</string>
	 <string name="change_settings">Change Settings</string>
	 <string name="settings_tab1">Buddies</string>
	 <string name="settings_tab2">Emergency Contacts</string>
	 <string name="empty"/>
	 <string name="browse">Browse</string>
	 <string name="buddy_settings">Configure your best buddies to contact in case of an emergency</string>
	 <string name="OK">   OK    </string>
	 <string name="changePolice">Set contact number of Police Emergency Service</string>
	 <string name="changeAmbulanceNo">Set contact number of Emergency Ambulance Service</string>
	 <string name="changeFireBrigadeNo">Set contact number of Fire Brigade Emergency Service</string>
	 <string name="settingsTab1">Change predifined emergency contact numbers</string>
	 <string name="send">Send</string>
	 <string name="emergency_comfirm">You are about to send an emergeny informing mesage!</string>
	 <string name="label_emergency_message">Edit and touch the \"send\" button to send this message to your buddies. Hit back button to cancel</string>
	 <string name="automatic_messages">Send messages repeatedly</string>
	 <string name="message">Hi, I am at an emergency. I need your help ASAP. My location is (%1$f,%2$f). Possible address %3$s. </string>
	 <string name="email_additional">Hi, this is %1$s, I am at an emergency. I need your help ASAP. My location is (%2$f,%3$f). Possible address %4$s.</string>
	 <string name="messege_short">Hi, I am at an emergency. I need your help ASAP</string>
	 <string name="message_SMS">Hi, I am at an emergency. I need your help ASAP. My location is %1$f,%2$f. Check your mail for more info.</string>
	 <string name="earthquacke">Eathquacke and Tsunami Info</string>
	 <string name="weather_title">Weather Info</string>
	 <string name="disclaimer">Note: This data is downloaded from external service providers and may not be 100% accurate</string>
	 <string name="loding">Loading</string>
	 
</resources>