<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/weather_title"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textStyle="bold"/>

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="18dp" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loding"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewWindSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loding"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >



                <TextView
                    android:id="@+id/textViewRain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loding"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loding"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>
            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loding"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>
            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewStrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loding"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>
            <TableRow
                android:id="@+id/tableRowSnow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewSnow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loding"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>
        </TableLayout>

        <DigitalClock
            android:id="@+id/digitalClock1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="DigitalClock" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/digitalClock1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/earthquacke" android:onClick="onCLickEarthQuackeAndTsnamiInfo"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button1"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/disclaimer"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

</LinearLayout>